# bridge

./: .gitignore  .gitmodules  README.md  Untitled-1  bun.lockb  data.py  http_ca.crt  mlflow.db  notes-vcs.py  require.txt  requirements.txt  st_app.py  st_model_utils.py  talk_to_gpt.py  test.ipynb
MySQL_Cubes_Nodes/: api_reqs.py  embed_descs.py  load_to_vespa.py  load_yamls_to_vespa.py  notes_vespa.md  vespa_app.py  vespa_app_init.py
benchmarks/: MS_MARCO.ipynb
connect/: create_cubes_mysql.py  create_cubes_postgres.py  desc_gen.py
core/: .gitignore  BUGS.md  Cargo.toml  README.md  ROADMAP.md  benchmark_results_efsearch128.txt  benchmark_results_hnsw.txt  build.rs
core/benchmarks/: README.md  add.lua  add_4096d.lua  batch_add.lua  high_concurrency.sh  max_performance.sh  quick_test.sh  realistic_4096d.lua  realistic_benchmark.py  run_tests.sh  search.lua  search_4096d.lua  vector_only.lua
core/src/: main.rs  seekstorm_reference.rs
core/src/persistence/: mod.rs  snapshot.rs  wal.rs
data/: data.py  relationships.cql
demo/: README.md  employees.csv  requirements.txt  st_app.py  st_model_utils.py
demoHR/: requirements.txt  server-no-scrape.py
demos/: .gitignore
description generation/: pdf_desc.py
dev/: attention.ipynb  autoencoder.ipynb  croissant.ipynb  data_function_mapper.py  faiss.ipynb  faiss_index.pkl  metadata.ipynb  mixed_bread.ipynb  model_load.ipynb  model_repo (1).ipynb  neo4j.ipynb  path.ipynb  pipeline.ipynb  rrf.ipynb  talk_to_gpt.py  vespa-bge.ipynb  vespa-colbert-e5.ipynb  vespa-long-colbert.ipynb  xgboost.ipynb
notes/: Attention.md  (+14 more)
(+523 files in other folders)
