[package]
name = "core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.9.0"
bindgen = "0.71.1"
env_logger = "0.11.5"
libc = "0.2.168"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
bindgen = "0.71.1"
